# ONESTRUCTION-Point-Cloud-to-BIM

./: .gitignore  CONFIGURATION.md  Copy_of_SAM3_multiprompt_demo (1).ipynb  Copy_of_SAM3_multiprompt_demo.ipynb  HybridPipelineRoomSegment.ipynb  June24RoomSegmentation_PipelineA.ipynb  README.md  READMEVSCODEPIPELINE.md  RESEARCH_CAVEATS.md  RUNBOOK.md  RoomSegmentation.ipynb  RoomSegmentationGeometric6_4_2026.ipynb  RoomSegmentation_SAM_Pipeline.ipynb  SAM_ROOM_SEGMENTATION_PLAN.md  WallImageProcessing.ipynb  WallSegmentation.ipynb  WallsToIfcJson.ipynb  params.yaml  params.yaml.bak  pyproject.toml  requirements.txt  run_pipeline.py  textToXYZ_Converter.py
JSON_ifc4/: json_schema_guide.md  json_to_ifc4.ipynb
configs/: default.yaml
data/: README.md
notebooks/: notebook_1_occupancy_raster.ipynb  notebook_2_watershed_segmentation.ipynb  notebook_3_room_masks_and_wall_assignment.ipynb  notebook_4_sam_refinement.ipynb  notebook_5_walls_on_sam_refined.ipynb
notebooks/converters/: s3dis_loader.ipynb
notebooks/evaluation/: README.md  gt_raster.ipynb  pq_eval.ipynb
notebooks/methods/SAM/: HOW_SAM_WORKS.md  notebook_1_sam_auto_segmentation.ipynb  notebook_2_wall_assignment.ipynb
notebooks/methods/geometric/: notebook_1_watershed.ipynb  notebook_2_wall_assignment.ipynb
notebooks/methods/geometric_SAM/: notebook_1_watershed.ipynb  notebook_2_sam_refinement.ipynb  notebook_3_wall_assignment.ipynb
notebooks/postprocessing/: notebook_1_wall_segmentation.ipynb  notebook_2_wall_image_processing.ipynb  notebook_3_ifc_export.ipynb
notebooks/preprocessing/: notebook_1_occupancy_raster.ipynb
scan2bim/: ARCHITECTURE.md  __init__.py  artifacts.py  bsdd_enrich.py  config.py  eval.py  ifc_export.py  io_utils.py  raster.py  runconfig.py  sam_auto.py  sam_refine.py  slab.py  viz.py  wall_proc.py  wall_seg.py  walls.py  watershed.py
src/scan2bim/: __init__.py  cli.py  config.py  ifc_export.py  io.py  room_segmentation.py  viz.py  wall_image_processing.py  wall_segmentation.py
src/scan2bim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: _synth.py  test_config.py  test_coordinate_integrity.py  test_eval.py  test_notebooks.py  test_pipeline_baseline.py  test_runconfig.py  test_sam_auto.py  test_sam_refine.py  test_validation.py
