[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scan2bim"
version = "1.0.0"
description = "Scan-to-BIM room segmentation (occupancy -> watershed -> wall assignment -> SAM refinement)."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "pillow",
    "matplotlib",
    "open3d",
    "pyyaml",
]

[project.optional-dependencies]
# 'sv'  : the supervision-based overlays (not used by the notebooks themselves)
sv  = ["supervision"]
# 'sam' : the Notebook-4 SAM refinement (GPU / Colab). SAM 2 itself is installed separately
#   (verified against github.com/facebookresearch/sam2):
#   pip install "git+https://github.com/facebookresearch/sam2.git"
sam = ["torch>=2.5.1", "torchvision>=0.20.1"]
# 'dev' : test tooling
dev = ["pytest"]

[tool.setuptools]
packages = ["scan2bim"]
