[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scan2bim"
version = "1.0.0"
description = "End-to-end pipeline converting 3D LiDAR scans into IFC4 BIM models"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jackson Matsumura" },
    { name = "Ian Mendoza" },
    { name = "Finn Wood" },
    { name = "Marvin Recio" },
]

dependencies = [
    "numpy>=1.24",
    "open3d>=0.17",
    "opencv-python-headless>=4.8",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
sam = [
    "torch>=2.0",
    "torchvision>=0.15",
    "segment-anything",
]
ifc = [
    "ifcopenshell",
]
dev = [
    "pytest>=7.0",
    "scan2bim[sam,ifc]",
]

[tool.setuptools]
packages = ["scan2bim"]
